Closed
Bug 336472
Opened 19 years ago
Closed 19 years ago
cursor and status bar flickering if window opened underneath mouse
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jaas, Assigned: jaas)
Details
Attachments
(1 file)
1.25 KB,
patch
|
mark
:
review+
|
Details | Diff | Splinter Review |
In bug 331349 we made Cocoa widgets send NS_MOUSE_ENTER and NS_MOUSE_EXIT events. That system relies on our NSView subclass getting mouse entered and exited notifications.
The problem is that if you open a browser window underneath the mouse, whatever NSView you are over does not get mouse entered notifications and doesn't send mouse exited notifications when the mouse leaves. This causes cursor and status far flickering.
To reproduce this problem, launch Cocoa Firefox and postion your mouse so that when its first window appears the mouse is over the URL bar. Then move the mouse into the content area and mouse over links. Alternatively, position the mouse over the content area and the move to the URL bar then back to content and mouse over links.
Attachment #225739 -
Flags: review?(mark)
Comment 2•19 years ago
|
||
Comment on attachment 225739 [details] [diff] [review]
fix v1.0
While testing this, I seemed to be able to get into a state where mouse movement would not result in any NS_MOUSE_ENTERs at all.
Comment 3•19 years ago
|
||
...but I can't seem to reproduce that now. (Maybe I was just neglecting to activate the app?)
Comment 5•19 years ago
|
||
Comment on attachment 225739 [details] [diff] [review]
fix v1.0
Haven't succeeded in reproducing again.
Attachment #225739 -
Flags: review?(mark) → review+
landed on trunk
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•