fix cursor and status bar flickering if window opened underneath mouse. b=336472 r=mento